*Empty MediaWiki Message*

--- a/27_wamber.mw
+++ b/27_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''27 [[wamber]]''' d ass {{exp|wis}}331 n useggas ({{exp|wis}}332 deg iseggasen ''bisekstil''). Llan 34 wussan deffir-s ar taggara n useggas.
+Ass '''27 [[wamber]]''' d ass wis 331 n useggas (wis 332 deg iseggasen ''bisekstil''). Llan 34 wussan deffir-s ar taggara n useggas.
 <center>[[26 wamber]] - ''27 wamber'' - [[28 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''27 [[wamber]]''' d ass {{exp|wis}}331 n useggas ({{exp|wis}}332 deg isegg
 |commons=Category:27 november
 |commons azwel=27 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
