*Empty MediaWiki Message*

--- a/28_wamber.mw
+++ b/28_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''28 [[wamber]]''' d ass {{exp|wis}}332 n useggas ({{exp|wis}}333 deg iseggasen ''bisekstil''). Llan 33 wussan deffir-s ar taggara n useggas.
+Ass '''28 [[wamber]]''' d ass wis 332 n useggas (wis 333 deg iseggasen ''bisekstil''). Llan 33 wussan deffir-s ar taggara n useggas.
 <center>[[27 wamber]] - ''28 wamber'' - [[29 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''28 [[wamber]]''' d ass {{exp|wis}}332 n useggas ({{exp|wis}}333 deg isegg
 |commons=Category:28 november
 |commons azwel=28 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
