*Empty MediaWiki Message*

--- a/29_wamber.mw
+++ b/29_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''29 [[wamber]]''' d ass {{exp|wis}}333 n useggas ({{exp|wis}}334 deg iseggasen ''bisekstil''). Llan 32 wussan deffir-s ar taggara n useggas.
+Ass '''29 [[wamber]]''' d ass wis 333 n useggas (wis 334 deg iseggasen ''bisekstil''). Llan 32 wussan deffir-s ar taggara n useggas.
 <center>[[28 wamber]] - ''29 wamber'' - [[30 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''29 [[wamber]]''' d ass {{exp|wis}}333 n useggas ({{exp|wis}}334 deg isegg
 |commons=Category:29 november
 |commons azwel=29 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
