*Empty MediaWiki Message*

--- a/27_yunyu.mw
+++ b/27_yunyu.mw
@@ -7,9 +7,6 @@ Ass n 27 yunyu d ass wis 178 n useggas (wis 179 deg iseggasen ''bisekstil''). Ll
 |commons=Category:27 june
 |commons azwel=27 yunyu
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n yunyu]]
