*Empty MediaWiki Message*

--- a/12_dujamber.mw
+++ b/12_dujamber.mw
@@ -1,5 +1,5 @@
 {{Dujamber}}
-Ass '''12 [[dujamber]]''' d ass {{exp|wis}}346 n useggas (wis 347 deg iseggasen ''bisekstil''). Llan 19 wussan deffir-s ar taggara n useggas.
+Ass '''12 [[dujamber]]''' d ass wis 346 n useggas (wis 347 deg iseggasen ''bisekstil''). Llan 19 wussan deffir-s ar taggara n useggas.
 <center>[[11 wamber]] - ''12 dujamber'' - [[13 dujamber]]</center>
 
 == Tidyanin ==
@@ -68,7 +68,7 @@ Ass '''12 [[dujamber]]''' d ass {{exp|wis}}346 n useggas (wis 347 deg iseggasen 
 |commons=Category:12 december
 |commons azwel=12 dujamber
 }}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n dujamber]]
