--- a/9_ɣuct.mw
+++ b/9_ɣuct.mw
@@ -13,3 +13,6 @@ Ass '''9 [[ɣuct]]''' d ass {{exp|wis}}221 n useggas ({{exp|wis}}222 deg iseggas
 
 === timiḍi wis 21 ===
 * [[2008]] : [[Meḥmud Derwic]] amedyaz afalesṭini yemmut g [[Texas]] g [[Marikan]]
+
+{{Months}}
+{{MonthCategory}}
