--- a/9_ɣuct.mw
+++ b/9_ɣuct.mw
@@ -12,7 +12,7 @@ Ass '''9 [[ɣuct]]''' d ass {{exp|wis}}221 n useggas ({{exp|wis}}222 deg iseggas
 ==Wid yemmuten==
 
 === timiḍi wis 21 ===
-* [[2008]] : [[Meḥmud Derwic]] amedyaz afalesṭini yemmut g [[Texas]] g [[Marikan]]
+* [[2008]] : [[Meḥmud Derwic]] amedyaz afalesṭini yemmut deg [[Texas]] deg [[Marikan]].
 
 {{Months}}
 {{MonthCategory}}
