*Empty MediaWiki Message*

--- a/9_tuber.mw
+++ b/9_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''9 [[tuber]]''' d ass {{exp|wis}}282 n useggas ({{exp|wis}}283 deg iseggasen ''bisekstil''). Llan 83 wussan deffir-es ar taggara n useggas.
+Ass '''9 [[tuber]]''' d ass wis 282 n useggas (wis 283 deg iseggasen ''bisekstil''). Llan 83 wussan deffir-s ar taggara n useggas.
 <center>[[8 tuber]] - ''9 tuber'' - [[10 tuber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,8 @@ Ass '''9 [[tuber]]''' d ass {{exp|wis}}282 n useggas ({{exp|wis}}283 deg iseggas
 |commons=Category:9 october
 |commons azwel=9 tuber
 }}
-{{Ass asental}}
+{{Months}}
 
-{{Agni Izemzan}}
 
 
 [[Taggayt:Ass n tuber]]
