*Empty MediaWiki Message*

--- a/10_tuber.mw
+++ b/10_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''10 [[tuber]]''' d ass {{exp|wis}}283 n useggas ({{exp|wis}}284 deg iseggasen ''bisekstil''). Llan 82 wussan deffir-s ar taggara n useggas.
+Ass '''10 [[tuber]]''' d ass wis 283 n useggas (wis 284 deg iseggasen ''bisekstil''). Llan 82 wussan deffir-s ar taggara n useggas.
 <center>[[9 tuber]] - ''10 tuber'' - [[11 tuber]]</center>
 
 == Tidyanin ==
@@ -12,7 +12,7 @@ Ass '''10 [[tuber]]''' d ass {{exp|wis}}283 n useggas ({{exp|wis}}284 deg isegga
 |commons=Category:10 october
 |commons azwel=10 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 [[Taggayt:Ass n tuber]]
