*Empty MediaWiki Message*

--- a/3_wamber.mw
+++ b/3_wamber.mw
@@ -1,6 +1,6 @@
 {{wamber}}
 
-Ass '''3 [[wamber]]''' d ass {{exp|wis}}307 n useggas ({{exp|wis}}308 deg iseggasen ''bisekstil''). Llan 58 wussan deffir-es ar taggara n useggas.
+Ass '''3 [[wamber]]''' d ass wis 307 n useggas (wis 308 deg iseggasen ''bisekstil''). Llan 58 wussan deffir-s ar taggara n useggas.
 <center>[[2 wamber]] - ''3 wamber'' - [[4 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -8,9 +8,8 @@ Ass '''3 [[wamber]]''' d ass {{exp|wis}}307 n useggas ({{exp|wis}}308 deg isegga
 |commons=Category:3 november
 |commons azwel=3 wamber
 }}
-{{Ass asental}}
+{{Months}}
 
-{{Agni Izemzan}}
 
 
 [[Taggayt:Ass n wamber]]
