*Empty MediaWiki Message*

--- a/4_wamber.mw
+++ b/4_wamber.mw
@@ -1,6 +1,6 @@
 {{wamber}}
 
-Ass '''4 [[wamber]]''' d ass {{exp|wis}}308 n useggas ({{exp|wis}}309 deg iseggasen ''bisekstil''). Llan 57 wussan deffir-es ar taggara n useggas.
+Ass '''4 [[wamber]]''' d ass wis 308 n useggas (wis 309 deg iseggasen ''bisekstil''). Llan 57 wussan deffir-s ar taggara n useggas.
 <center>[[3 wamber]] - ''4 wamber'' - [[5 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -8,9 +8,8 @@ Ass '''4 [[wamber]]''' d ass {{exp|wis}}308 n useggas ({{exp|wis}}309 deg isegga
 |commons=Category:4 november
 |commons azwel=4 wamber
 }}
-{{Ass asental}}
+{{Months}}
 
-{{Agni Izemzan}}
 
 
 [[Taggayt:Ass n wamber]]
