*Empty MediaWiki Message*

--- a/5_wamber.mw
+++ b/5_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''5 [[wamber]]''' d ass {{exp|wis}}309 n useggas ({{exp|wis}}310 deg iseggasen ''bisekstil''). Llan 56 wussan deffir-es ar taggara n useggas.
+Ass '''5 [[wamber]]''' d ass wis 309 n useggas (wis 310 deg iseggasen ''bisekstil''). Llan 56 wussan deffir-s ar taggara n useggas.
 <center>[[4 wamber]] - ''5 wamber'' - [[6 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''5 [[wamber]]''' d ass {{exp|wis}}309 n useggas ({{exp|wis}}310 deg isegga
 |commons=Category:5 november
 |commons azwel=5 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
