*Empty MediaWiki Message*

--- a/6_wamber.mw
+++ b/6_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''6 [[wamber]]''' d ass {{exp|wis}}310 n useggas ({{exp|wis}}311 deg iseggasen ''bisekstil''). Llan 55 wussan deffir-es ar taggara n useggas.
+Ass '''6 [[wamber]]''' d ass wis 310 n useggas (wis 311 deg iseggasen ''bisekstil''). Llan 55 wussan deffir-s ar taggara n useggas.
 <center>[[5 wamber]] - ''6 wamber'' - [[7 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,8 @@ Ass '''6 [[wamber]]''' d ass {{exp|wis}}310 n useggas ({{exp|wis}}311 deg isegga
 |commons=Category:6 november
 |commons azwel=6 wamber
 }}
-{{Ass asental}}
+{{Months}}
 
-{{Agni Izemzan}}
 
 
 [[Taggayt:Ass n wamber]]
