*Empty MediaWiki Message*

--- a/7_wamber.mw
+++ b/7_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''7 [[wamber]]''' d ass {{exp|wis}}311 n useggas ({{exp|wis}}312 deg iseggasen ''bisekstil''). Llan 54 wussan deffir-es ar taggara n useggas.
+Ass '''7 [[wamber]]''' d ass wis 311 n useggas (wis 312 deg iseggasen ''bisekstil''). Llan 54 wussan deffir-s ar taggara n useggas.
 <center>[[6 wamber]] - ''7 wamber'' - [[8 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -8,9 +8,8 @@ Ass '''7 [[wamber]]''' d ass {{exp|wis}}311 n useggas ({{exp|wis}}312 deg isegga
 |commons=Category:7 november
 |commons azwel=7 wamber
 }}
-{{Ass asental}}
+{{Months}}
 
-{{Agni Izemzan}}
 
 
 [[Taggayt:Ass n wamber]]
