*Empty MediaWiki Message*

--- a/8_wamber.mw
+++ b/8_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''8 [[wamber]]''' d ass wis 312 n useggas ({{exp|wis}}313 deg iseggasen ''bisekstil''). Llan 53 wussan deffir-s ar taggara n useggas.
+Ass '''8 [[wamber]]''' d ass wis 312 n useggas (wis 313 deg iseggasen ''bisekstil''). Llan 53 wussan deffir-s ar taggara n useggas.
 <center>[[7 wamber]] - ''8 wamber'' - [[9 wamber]]</center>
 
 == Imagraden iqqenen ==
