*Empty MediaWiki Message*

--- a/9_wamber.mw
+++ b/9_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''9 [[wamber]]''' d ass {{exp|wis}}313 n useggas ({{exp|wis}}314 deg iseggasen ''bisekstil''). Llan 52 wussan deffir-es ar taggara n useggas.
+Ass '''9 [[wamber]]''' d ass wis 313 n useggas (wis 314 deg iseggasen ''bisekstil''). Llan 52 wussan deffir-s ar taggara n useggas.
 <center>[[8 wamber]] - ''9 wamber'' - [[10 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,8 @@ Ass '''9 [[wamber]]''' d ass {{exp|wis}}313 n useggas ({{exp|wis}}314 deg isegga
 |commons=Category:9 november
 |commons azwel=9 wamber
 }}
-{{Ass asental}}
+{{Months}}
 
-{{Agni Izemzan}}
 
 
 [[Taggayt:Ass n wamber]]
