*Empty MediaWiki Message*

--- a/3_tuber.mw
+++ b/3_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''3 [[tuber]]''' d ass {{exp|wis}}276 n useggas ({{exp|wis}}277 deg iseggasen ''bisekstil''). Llan 89 wussan deffir-s ar taggara n useggas.
+Ass '''3 [[tuber]]''' d ass wis 276 n useggas ({wis 277 deg iseggasen ''bisekstil''). Llan 89 wussan deffir-s ar taggara n useggas.
 <center>[[2 tuber]] - ''3 tuber'' - [[4 tuber]]</center>
 
 == Tidyanin ==
@@ -13,7 +13,6 @@ Ass '''3 [[tuber]]''' d ass {{exp|wis}}276 n useggas ({{exp|wis}}277 deg iseggas
 |commons=Category:3 October
 |commons azwel=3 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 [[Taggayt:Ass n tuber]]
