*Empty MediaWiki Message*

--- a/4_tuber.mw
+++ b/4_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''4 [[tuber]]''' d ass {{exp|wis}}277 n useggas ({{exp|wis}}278 deg iseggasen ''bisekstil''). Llan 88 wussan deffir-s ar taggara n useggas.
+Ass '''4 [[tuber]]''' d ass wis 277 n useggas (wis 278 deg iseggasen ''bisekstil''). Llan 88 wussan deffir-s ar taggara n useggas.
 <center>[[3 tuber]] - ''4 tuber'' - [[5 tuber]]</center>
 
 == Tidyanin ==
@@ -13,7 +13,7 @@ Ass '''4 [[tuber]]''' d ass {{exp|wis}}277 n useggas ({{exp|wis}}278 deg iseggas
 |commons=Category:4 October
 |commons azwel=4 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 [[Taggayt:Ass n tuber]]
