*Empty MediaWiki Message*

--- a/5_tuber.mw
+++ b/5_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''5 [[tuber]]''' d ass {{exp|wis}}278 n useggas ({{exp|wis}}279 deg iseggasen ''bisekstil''). Llan 87 wussan deffir-s ar taggara n useggas.
+Ass '''5 [[tuber]]''' d ass wis 278 n useggas (wis 279 deg iseggasen ''bisekstil''). Llan 87 wussan deffir-s ar taggara n useggas.
 <center>[[4 tuber]] - ''5 tuber'' - [[6 tuber]]</center>
 
 == Tidyanin ==
@@ -15,8 +15,7 @@ Ass '''5 [[tuber]]''' d ass {{exp|wis}}278 n useggas ({{exp|wis}}279 deg iseggas
 |commons=Category:5 October
 |commons azwel=5 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
