*Empty MediaWiki Message*

--- a/6_tuber.mw
+++ b/6_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''6 [[tuber]]''' d ass {{exp|wis}}279 n useggas ({{exp|wis}}280 deg iseggasen ''bisekstil''). Llan 86 wussan deffir-s ar taggara n useggas.
+Ass '''6 [[tuber]]''' d ass wis 279 n useggas (wis 280 deg iseggasen ''bisekstil''). Llan 86 wussan deffir-s ar taggara n useggas.
 <center>[[5 tuber]] - ''6 tuber'' - [[7 tuber]]</center>
 
 == Tidyanin ==
@@ -12,7 +12,7 @@ Ass '''6 [[tuber]]''' d ass {{exp|wis}}279 n useggas ({{exp|wis}}280 deg iseggas
 |commons=Category:6 October
 |commons azwel=6 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 [[Taggayt:Ass n tuber]]
