*Empty MediaWiki Message*

--- a/7_tuber.mw
+++ b/7_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''7 [[tuber]]''' d ass {{exp|wis}}280 n useggas ({{exp|wis}}281 deg iseggasen ''bisekstil''). Llan 85 wussan deffir-s ar taggara n useggas.
+Ass '''7 [[tuber]]''' d ass wis 280 n useggas (wis 281 deg iseggasen ''bisekstil''). Llan 85 wussan deffir-s ar taggara n useggas.
 <center>[[6 tuber]] - ''7 tuber'' - [[8 tuber]]</center>
 
 == Tidyanin ==
@@ -12,7 +12,7 @@ Ass '''7 [[tuber]]''' d ass {{exp|wis}}280 n useggas ({{exp|wis}}281 deg iseggas
 |commons=Category:7 October
 |commons azwel=7 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 [[Taggayt:Ass n tuber]]
