*Empty MediaWiki Message*

--- a/8_tuber.mw
+++ b/8_tuber.mw
@@ -1,10 +1,10 @@
 {{Tuber}}
-Ass '''8 [[tuber]]''' d ass {{exp|wis}}281 n useggas ({{exp|wis}}282 deg iseggasen ''bisekstil''). Llan 84 wussan deffir-s ar taggara n useggas.
+Ass '''8 [[tuber]]''' d ass wis 281 n useggas (wis 282 deg iseggasen ''bisekstil''). Llan 84 wussan deffir-s ar taggara n useggas.
 <center>[[7 tuber]] - ''8 tuber'' - [[9 tuber]]</center>
 == Tidyanin ==
 === Timiḍi wis 21 ===
 * [[2014]]
-** [[afsax agguuran n 8 tuber 2014|afsax agguuran ummid]] ;
+** [[afsax agguran n 8 tuber 2014|afsax agguran ummid]] ;
 ** [[Eric Betzig]], [[Stefan Hell]] d [[William Moerner]] ḍḍfen-d [[arraz Nobel n takrura]].
 
 == Imagraden iqqenen ==
@@ -12,9 +12,8 @@ Ass '''8 [[tuber]]''' d ass {{exp|wis}}281 n useggas ({{exp|wis}}282 deg iseggas
 |commons=Category:8 October
 |commons azwel=8 tuber
 }}
-{{Ass asental}}
+{{Months}}
 
-{{Agni Izemzan}}
 
 
 [[Taggayt:Ass n tuber]]
