*Empty MediaWiki Message*

--- a/3_fuṛaṛ.mw
+++ b/3_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 3 fuṛaṛ d ass {{exp|wis}}34 n useggas. Llan 331 wussan deffir-s ar taggara n useggas, {{exp|wis}}332 deg iseggasen ''bisekstil''.
+Ass n 3 fuṛaṛ d ass wis 34 n useggas. Llan 331 wussan deffir-s ar taggara n useggas, wis 332 deg iseggasen ''bisekstil''.
 <center>[[2 fuṛaṛ]] - ''3 fuṛaṛ'' - [[4 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 3 fuṛaṛ d ass {{exp|wis}}34 n useggas. Llan 331 wussan deffir-s ar tag
 |commons=Category:3 february
 |commons azwel=3 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
