*Empty MediaWiki Message*

--- a/4_fuṛaṛ.mw
+++ b/4_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{furar}}
-Ass n 4 fuṛaṛ d ass {{exp|wis}}35 n useggas. Llan 330 wussan deffir-s ar taggara n useggas, {{exp|wis}}331 deg iseggasen ''bisekstil''.
+Ass n 4 fuṛaṛ d ass wis 35 n useggas. Llan 330 wussan deffir-s ar taggara n useggas, wis 331 deg iseggasen ''bisekstil''.
 <center>[[3 fuṛaṛ]] - ''4 fuṛaṛ'' - [[5 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 4 fuṛaṛ d ass {{exp|wis}}35 n useggas. Llan 330 wussan deffir-s ar tag
 |commons=Category:4 february
 |commons azwel=4 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
