*Empty MediaWiki Message*

--- a/5_fuṛaṛ.mw
+++ b/5_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 5 fuṛaṛ d ass {{exp|wis}}36 n useggas. Llan 329 wussan deffir-s ar taggara n useggas, {{exp|wis}}330 deg iseggasen ''bisekstil''.
+Ass n 5 fuṛaṛ d ass wis 36 n useggas. Llan 329 wussan deffir-s ar taggara n useggas, wis 330 deg iseggasen ''bisekstil''.
 <center>[[4 fuṛaṛ]] - ''5 fuṛaṛ'' - [[6 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 5 fuṛaṛ d ass {{exp|wis}}36 n useggas. Llan 329 wussan deffir-s ar tag
 |commons=Category:5 february
 |commons azwel=5 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
