--- a/6_fuṛaṛ.mw
+++ b/6_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 6 fuṛaṛ d ass {{exp|wis}}37 n useggas. Llan 328 wussan deffir-s ar taggara n useggas, {{exp|wis}}329 deg iseggasen ''bisekstil''.
+Ass n 6 fuṛaṛ d ass wis 37 n useggas. Llan 328 wussan deffir-s ar taggara n useggas, wis 329 deg iseggasen ''bisekstil''.
 <center>[[5 fuṛaṛ]] - ''6 fuṛaṛ'' - [[7 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 6 fuṛaṛ d ass {{exp|wis}}37 n useggas. Llan 328 wussan deffir-s ar tag
 |commons=Category:6 february
 |commons azwel=6 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
