*Empty MediaWiki Message*

--- a/7_fuṛaṛ.mw
+++ b/7_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 7 fuṛaṛ d ass {{exp|wis}}38 n useggas. Llan 327 wussan deffir-s ar taggara n useggas, {{exp|wis}}328 deg iseggasen ''bisekstil''.
+Ass n 7 fuṛaṛ d ass wis 38 n useggas. Llan 327 wussan deffir-s ar taggara n useggas, wis 328 deg iseggasen ''bisekstil''.
 <center>[[6 fuṛaṛ]] - ''7 fuṛaṛ'' - [[8 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,7 @@ Ass n 7 fuṛaṛ d ass {{exp|wis}}38 n useggas. Llan 327 wussan deffir-s ar tag
 |commons=Category:7 february
 |commons azwel=7 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n fuṛaṛ]]
