*Empty MediaWiki Message*

--- a/8_fuṛaṛ.mw
+++ b/8_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 8 fuṛaṛ d ass {{exp|wis}}39 n useggas. Llan 326 wussan deffir-s ar taggara n useggas, {{exp|wis}}327 deg iseggasen ''bisekstil''.
+Ass n 8 fuṛaṛ d ass wis 39 n useggas. Llan 326 wussan deffir-s ar taggara n useggas, wis 327 deg iseggasen ''bisekstil''.
 <center>[[7 fuṛaṛ]] - ''8 fuṛaṛ'' - [[9 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 8 fuṛaṛ d ass {{exp|wis}}39 n useggas. Llan 326 wussan deffir-s ar tag
 |commons=Category:8 february
 |commons azwel=8 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
