*Empty MediaWiki Message*

--- a/10_fuṛaṛ.mw
+++ b/10_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 10 fuṛaṛ d ass {{exp|wis}}41 n useggas. Llan 324 wussan deffir-s ar taggara n useggas, {{exp|wis}}325 deg iseggasen ''bisekstil''.
+Ass n 10 fuṛaṛ d ass wis 41 n useggas. Llan 324 wussan deffir-s ar taggara n useggas, wis 325 deg iseggasen ''bisekstil''.
 <center>[[9 fuṛaṛ]] - ''10 fuṛaṛ'' - [[11 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 10 fuṛaṛ d ass {{exp|wis}}41 n useggas. Llan 324 wussan deffir-s ar ta
 |commons=Category:10 february
 |commons azwel=10 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
