*Empty MediaWiki Message*

--- a/28_fuṛaṛ.mw
+++ b/28_fuṛaṛ.mw
@@ -1,14 +1,13 @@
 {{fuṛaṛ}}
-Ass n 28 fuṛaṛ d ass {{exp|wis}}59 n useggas. Llan 306 wussan deffir-s ar taggara n useggas, {{exp|wis}}307 deg iseggasen ''bisekstil''.
+Ass n 28 fuṛaṛ d ass wis 59 n useggas. Llan 306 wussan deffir-s ar taggara n useggas, wis 307 deg iseggasen ''bisekstil''.
 <center>[[27 fuṛaṛ]] - ''28 fuṛaṛ'' - [[29 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:28 february
 |commons azwel=28 fuṛaṛ
-}}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
