--- a/27_fuṛaṛ.mw
+++ b/27_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 27 fuṛaṛ d ass {{exp|wis}}58 n useggas. Llan 307 wussan deffir-s ar taggara n useggas, {{exp|wis}}308 deg iseggasen ''bisekstil''.
+Ass n 27 fuṛaṛ d ass wis 58 n useggas. Llan 307 wussan deffir-s ar taggara n useggas, wis 308 deg iseggasen ''bisekstil''.
 <center>[[26 fuṛaṛ]] - ''27 fuṛaṛ'' - [[28 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 27 fuṛaṛ d ass {{exp|wis}}58 n useggas. Llan 307 wussan deffir-s ar ta
 |commons=Category:27 february
 |commons azwel=27 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
