*Empty MediaWiki Message*

--- a/28_fuṛaṛ.mw
+++ b/28_fuṛaṛ.mw
@@ -5,9 +5,6 @@ Ass n 28 fuṛaṛ d ass wis 59 n useggas. Llan 306 wussan deffir-s ar taggara n
 == Imagraden iqqenen ==
 {{Isenfaṛen nniḍen
 |commons=Category:28 february
-|commons azwel=28 fuṛaṛ
+|commons azwel=28 fuṛaṛ}}
 {{Months}}
-
-
-
 [[Taggayt:Ass n fuṛaṛ]]
