--- a/11_fuṛaṛ.mw
+++ b/11_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 11 fuṛaṛ d ass {{exp|wis}}42 n useggas. Llan 323 wussan deffir-s ar taggara n useggas, {{exp|wis}}324 deg iseggasen ''bisekstil''.
+Ass n 11 fuṛaṛ d ass wis 42 n useggas. Llan 323 wussan deffir-s ar taggara n useggas, wis 324 deg iseggasen ''bisekstil''.
 <center>[[10 fuṛaṛ]] - ''11 fuṛaṛ'' - [[12 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,6 @@ Ass n 11 fuṛaṛ d ass {{exp|wis}}42 n useggas. Llan 323 wussan deffir-s ar ta
 |commons=Category:11 february
 |commons azwel=11 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n fuṛaṛ]]
