*Empty MediaWiki Message*

--- a/12_fuṛaṛ.mw
+++ b/12_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 12 fuṛaṛ d ass {{exp|wis}}43 n useggas. Llan 322 wussan deffir-s ar taggara n useggas, {{exp|wis}}323 deg iseggasen ''bisekstil''.
+Ass n 12 fuṛaṛ d ass wis 43 n useggas. Llan 322 wussan deffir-s ar taggara n useggas, wis 323 deg iseggasen ''bisekstil''.
 <center>[[11 fuṛaṛ]] - ''12 fuṛaṛ'' - [[13 fuṛaṛ]]</center>
 
 == Timettanin ==
@@ -10,8 +10,7 @@ Ass n 12 fuṛaṛ d ass {{exp|wis}}43 n useggas. Llan 322 wussan deffir-s ar ta
 |commons=Category:12 february
 |commons azwel=12 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
 
+{{Months}}
 
 [[Taggayt:Ass n fuṛaṛ]]
