--- a/13_fuṛaṛ.mw
+++ b/13_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 13 fuṛaṛ d ass {{exp|wis}}44 n useggas. Llan 321 wussan deffir-s ar taggara n useggas, {{exp|wis}}322 deg iseggasen ''bisekstil''.
+Ass n 13 fuṛaṛ d ass wis 44 n useggas. Llan 321 wussan deffir-s ar taggara n useggas, wis 322 deg iseggasen ''bisekstil''.
 <center>[[12 fuṛaṛ]] - ''13 fuṛaṛ'' - [[14 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 13 fuṛaṛ d ass {{exp|wis}}44 n useggas. Llan 321 wussan deffir-s ar ta
 |commons=Category:13 february
 |commons azwel=13 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
