*Empty MediaWiki Message*

--- a/14_fuṛaṛ.mw
+++ b/14_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 14 fuṛaṛ d ass {{exp|wis}}45 n useggas. Llan 320 wussan deffir-s ar taggara n useggas, {{exp|wis}}321 deg iseggasen ''bisekstil''.
+Ass n 14 fuṛaṛ d ass wis 45 n useggas. Llan 320 wussan deffir-s ar taggara n useggas, wis 321 deg iseggasen ''bisekstil''.
 <center>[[13 fuṛaṛ]] - ''14 fuṛaṛ'' - [[15 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 14 fuṛaṛ d ass {{exp|wis}}45 n useggas. Llan 320 wussan deffir-s ar ta
 |commons=Category:14 february
 |commons azwel=14 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
