*Empty MediaWiki Message*

--- a/15_fuṛaṛ.mw
+++ b/15_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 15 fuṛaṛ d ass {{exp|wis}}46 n useggas. Llan 319 wussan deffir-s ar taggara n useggas, {{exp|wis}}320 deg iseggasen ''bisekstil''.
+Ass n 15 fuṛaṛ d ass wis 46 n useggas. Llan 319 wussan deffir-s ar taggara n useggas, wis 320 deg iseggasen ''bisekstil''.
 <center>[[14 fuṛaṛ]] - ''15 fuṛaṛ'' - [[16 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,6 @@ Ass n 15 fuṛaṛ d ass {{exp|wis}}46 n useggas. Llan 319 wussan deffir-s ar ta
 |commons=Category:15 february
 |commons azwel=15 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n fuṛaṛ]]
