--- a/16_fuṛaṛ.mw
+++ b/16_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 16 fuṛaṛ d ass {{exp|wis}}47 n useggas. Llan 318 wussan deffir-s ar taggara n useggas, {{exp|wis}}319 deg iseggasen ''bisekstil''.
+Ass n 16 fuṛaṛ d ass wis 47 n useggas. Llan 318 wussan deffir-s ar taggara n useggas, wis 319 deg iseggasen ''bisekstil''.
 <center>[[15 fuṛaṛ]] - ''16 fuṛaṛ'' - [[17 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,6 @@ Ass n 16 fuṛaṛ d ass {{exp|wis}}47 n useggas. Llan 318 wussan deffir-s ar ta
 |commons=Category:16 february
 |commons azwel=16 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n fuṛaṛ]]
