*Empty MediaWiki Message*

--- a/17_fuṛaṛ.mw
+++ b/17_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 17 fuṛaṛ d ass {{exp|wis}}48 n useggas. Llan 317 wussan deffir-s ar taggara n useggas, {{exp|wis}}318 deg iseggasen ''bisekstil''.
+Ass n 17 fuṛaṛ d ass wis 48 n useggas. Llan 317 wussan deffir-s ar taggara n useggas, wis 318 deg iseggasen ''bisekstil''.
 <center>[[16 fuṛaṛ]] - ''17 fuṛaṛ'' - [[18 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 17 fuṛaṛ d ass {{exp|wis}}48 n useggas. Llan 317 wussan deffir-s ar ta
 |commons=Category:17 february
 |commons azwel=17 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
