*Empty MediaWiki Message*

--- a/18_fuṛaṛ.mw
+++ b/18_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 18 fuṛaṛ d ass {{exp|wis}}49 n useggas. Llan 316 wussan deffir- s ar taggara n useggas, {{exp|wis}}317 deg iseggasen ''bisekstil''.
+Ass n 18 fuṛaṛ d ass wis 49 n useggas. Llan 316 wussan deffir- s ar taggara n useggas, wis 317 deg iseggasen ''bisekstil''.
 <center>[[17 fuṛaṛ]] - ''18 fuṛaṛ'' - [[19 fuṛaṛ]]</center>
 
 == Timettanin ==
@@ -11,8 +11,8 @@ Ass n 18 fuṛaṛ d ass {{exp|wis}}49 n useggas. Llan 316 wussan deffir- s ar t
 |commons=Category:18 february
 |commons azwel=18 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
