--- a/19_fuṛaṛ.mw
+++ b/19_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 19 fuṛaṛ d ass {{exp|wis}}50 n useggas. Llan 315 wussan deffir-s ar taggara n useggas, {{exp|wis}}316 deg iseggasen ''bisekstil''.
+Ass n 19 fuṛaṛ d ass wis 50 n useggas. Llan 315 wussan deffir-s ar taggara n useggas, wis 316 deg iseggasen ''bisekstil''.
 <center>[[18 fuṛaṛ]] - ''19 fuṛaṛ'' - [[20 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,6 @@ Ass n 19 fuṛaṛ d ass {{exp|wis}}50 n useggas. Llan 315 wussan deffir-s ar ta
 |commons=Category:19 february
 |commons azwel=19 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n fuṛaṛ]]
