*Empty MediaWiki Message*

--- a/20_fuṛaṛ.mw
+++ b/20_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 20 fuṛaṛ d ass {{exp|wis}}51 n useggas. Llan 314 wussan deffir-s ar taggara n useggas, {{exp|wis}}315 deg iseggasen ''bisekstil''.
+Ass n 20 fuṛaṛ d ass wis 51 n useggas. Llan 314 wussan deffir-s ar taggara n useggas, wis 315 deg iseggasen ''bisekstil''.
 <center>[[19 fuṛaṛ]] - ''20 fuṛaṛ'' - [[21 fuṛaṛ]]</center>
 
 == Tira d isadwalen ==
@@ -7,8 +7,6 @@ Ass n 20 fuṛaṛ d ass {{exp|wis}}51 n useggas. Llan 314 wussan deffir-s ar ta
 |commons=Category:20 february
 |commons azwel=20 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n fuṛaṛ]]
