--- a/21_fuṛaṛ.mw
+++ b/21_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{Furar}}
-Ass n 21 fuṛaṛ d ass {{exp|wis}}52 n useggas. Llan 313 wussan deffir-s ar taggara n useggas, {{exp|wis}}314 deg iseggasen ''bisekstil''.
+Ass n 21 fuṛaṛ d ass wis 52 n useggas. Llan 313 wussan deffir-s ar taggara n useggas, wis 314 deg iseggasen ''bisekstil''.
 <center>[[20 fuṛaṛ]] - ''21 fuṛaṛ'' - [[22 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 21 fuṛaṛ d ass {{exp|wis}}52 n useggas. Llan 313 wussan deffir-s ar ta
 |commons=Category:21 february
 |commons azwel=21 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
