--- a/22_fuṛaṛ.mw
+++ b/22_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 22 fuṛaṛ d ass {{exp|wis}}53 n useggas. Llan 312 wussan deffir-es ar taggara n useggas, {{exp|wis}}313 deg iseggasen ''bisekstil''.
+Ass n 22 fuṛaṛ d ass wis 53 n useggas. Llan 312 wussan deffir-es ar taggara n useggas, wis 313 deg iseggasen ''bisekstil''.
 <center>[[21 fuṛaṛ]] - ''22 fuṛaṛ'' - [[23 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,6 @@ Ass n 22 fuṛaṛ d ass {{exp|wis}}53 n useggas. Llan 312 wussan deffir-es ar t
 |commons=Category:22 february
 |commons azwel=22 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n fuṛaṛ]]
