*Empty MediaWiki Message*

--- a/23_fuṛaṛ.mw
+++ b/23_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 23 fuṛaṛ d ass {{exp|wis}}54 n useggas. Llan 311 wussan deffir-s ar taggara n useggas, {{exp|wis}}312 deg iseggasen ''bisekstil''.
+Ass n 23 fuṛaṛ d ass wis 54 n useggas. Llan 311 wussan deffir-s ar taggara n useggas, wis 312 deg iseggasen ''bisekstil''.
 <center>[[22 fuṛaṛ]] - ''23 fuṛaṛ'' - [[24 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,6 @@ Ass n 23 fuṛaṛ d ass {{exp|wis}}54 n useggas. Llan 311 wussan deffir-s ar ta
 |commons=Category:23 february
 |commons azwel=23 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n fuṛaṛ]]
