*Empty MediaWiki Message*

--- a/24_fuṛaṛ.mw
+++ b/24_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 24 fuṛaṛ d ass {{exp|wis}}55 n useggas. Llan 310 wussan deffir-s ar taggara n useggas, {{exp|wis}}311 deg iseggasen ''bisekstil''.
+Ass n 24 fuṛaṛ d ass wis 55 n useggas. Llan 310 wussan deffir-s ar taggara n useggas, wis 311 deg iseggasen ''bisekstil''.
 <center>[[23 fuṛaṛ]] - ''24 fuṛaṛ'' - [[25 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,7 @@ Ass n 24 fuṛaṛ d ass {{exp|wis}}55 n useggas. Llan 310 wussan deffir-s ar ta
 |commons=Category:24 february
 |commons azwel=24 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n fuṛaṛ]]
