*Empty MediaWiki Message*

--- a/25_fuṛaṛ.mw
+++ b/25_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 25 fuṛaṛ d ass {{exp|wis}}56 n useggas. Llan 309 wussan deffir-s ar taggara n useggas, {{exp|wis}}310 deg iseggasen ''bisekstil''.
+Ass n 25 fuṛaṛ d ass wis 56 n useggas. Llan 309 wussan deffir-s ar taggara n useggas, wis 310 deg iseggasen ''bisekstil''.
 <center>[[24 fuṛaṛ]] - ''25 fuṛaṛ'' - [[26 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 25 fuṛaṛ d ass {{exp|wis}}56 n useggas. Llan 309 wussan deffir-s ar ta
 |commons=Category:25 february
 |commons azwel=25 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
