--- a/26_fuṛaṛ.mw
+++ b/26_fuṛaṛ.mw
@@ -1,5 +1,5 @@
 {{fuṛaṛ}}
-Ass n 26 fuṛaṛ d ass {{exp|wis}}57 n useggas. Llan 308 wussan deffir-s ar taggara n useggas, {{exp|wis}}309 deg iseggasen ''bisekstil''.
+Ass n 26 fuṛaṛ d ass wis 57 n useggas. Llan 308 wussan deffir-s ar taggara n useggas, wis 309 deg iseggasen ''bisekstil''.
 <center>[[25 fuṛaṛ]] - ''26 fuṛaṛ'' - [[27 fuṛaṛ]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,8 @@ Ass n 26 fuṛaṛ d ass {{exp|wis}}57 n useggas. Llan 308 wussan deffir-s ar ta
 |commons=Category:26 february
 |commons azwel=26 fuṛaṛ
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 
 [[Taggayt:Ass n fuṛaṛ]]
