*Empty MediaWiki Message*

--- a/11_tuber.mw
+++ b/11_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''11 [[tuber]]''' d ass {{exp|wis}}284 n useggas ({{exp|wis}}285 deg iseggasen ''bisekstil''). Llan 81 wussan deffir-s ar taggara n useggas.
+Ass '''11 [[tuber]]''' d ass wis  284 n useggas (wis 285 deg iseggasen ''bisekstil''). Llan 81 wussan deffir-s ar taggara n useggas.
 <center>[[10 tuber]] - ''11 tuber'' - [[12 tuber]]</center>
 
 == Tidyanin ==
@@ -14,7 +14,7 @@ Ass '''11 [[tuber]]''' d ass {{exp|wis}}284 n useggas ({{exp|wis}}285 deg isegga
 |commons=Category:11 october
 |commons azwel=11 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
+
 
 [[Taggayt:Ass n tuber]]
