--- a/Amqerqur.mw
+++ b/Amqerqur.mw
@@ -1,5 +1,5 @@
 {{Automatic taxobox}}
-'''Amqerqur''' deg [[Taqbaylit|tutlayt Taqbaylit]] d [[assaɣ imezdi]] i yettwafken i wugar n 500 n [[talmest|telmas]] n [[Tikelmanin|tkelmanin]] dgi llant waṭas n [[tawacult (tasnudert)|twaculin]] am [[amqerqur idetti|umqerqur idetti]] (''Bufonidae''), Aṭas n midden ur ssinen ara ad ssemgirrden (ad meyyzen) gar n imqerqar d [[agru|igra]] acku ttemcabin s waṭas deg telɣa, maca deg tidet amqerqur yettmil ar tudert deg tzagirt (sufel n wakal) acku ila (yesɛa) aglim yeqquren d yini aras i wakken ad yezmer ad yidir s ddaw n tafat n tfukt w ad [[asengel|issengel]] s iman-is deg  taennaṭ is d-yezzin, Dɣa iṭarren n umqerqur d wid-ak yemmugen i tikli mači i wenttag am [[agru|wegru]], Tiẓunt niden deg wemgarad gar n umqerqur d wegru d akken amqerqur yeɣɣaz akal i wakken ad yessers [[tamellalt|timellalin-is]] ma d agru yessrusay timellalin-is s ddaw n waman
+'''Amqerqur''' deg [[Taqbaylit|tutlayt Taqbaylit]] d [[assaɣ imezdi]] i yettwafken i wugar n 500 n [[talmest|telmas]] n [[Tikelmanin|tkelmanin]] dgi llant waṭas n [[tawacult (tasnudert)|twaculin]] am [[amqerqur idetti|umqerqur idetti]] (''Bufonidae''), Aṭas n midden ur ssinen ara ad ssemgirrden (ad meyyzen) gar n imqerqar d [[agru|igra]] acku ttemcabin s waṭas deg telɣa, maca deg tidet amqerqur yettmil ar tudert deg tzagirt (sufel n wakal) acku ila (yesɛa) aglim yeqquren d yini aras i wakken ad yezmer ad yidir s ddaw n tafat n tfukt w ad [[asengel|issengel]] s iman-is deg  twennaṭ is d-yezzin, Dɣa iṭarren n umqerqur d wid-ak yemmugen i tikli mači i wenttag am [[agru|wegru]], Tiẓunt niden deg wemgarad gar n umqerqur d wegru d akken amqerqur yeɣɣaz akal i wakken ad yessers [[tamellalt|timellalin-is]] ma d agru yessrusay timellalin-is s ddaw n waman
 
 == Iẓuran irakalen d imazrayen ==
 Yakk imqerqar kkand seg [[aẓaṛ amezday|uẓar imezdi]] yeddren deg [[Tamrikt n Wenẓul|Marikan n unẓul]] send n 10 n imelyan n iseggasen maca sin akin s imik imik (cuya cuya) smhersen (steɛmren) yal [[amenẓaw]] anagar [[Antraktika]], ma deg [[Ustralya]] d [[Madagaskar]] sakken kan id ttuskecmen sɣur [[afgan|wemdan]], Akken daɣen i llant kra n tegzirin tisufanin ulac degsen-t imqerqar aladɣa deg [[agaraw amelwi|ugaraw amelwi]] 
