/* Iẓuran irakalen d imazrayen */

--- a/Amqerqur.mw
+++ b/Amqerqur.mw
@@ -4,6 +4,19 @@
 == Iẓuran irakalen d imazrayen ==
 Yakk imqerqar kkand seg [[aẓaṛ amezday|uẓar imezdi]] yeddren deg [[Tamrikt n Wenẓul|Marikan n unẓul]] send n 10 n imelyan n iseggasen maca sin akin s imik imik (cuya cuya) smhersen (steɛmren) yal [[amenẓaw]] anagar [[Antraktika]], ma deg [[Ustralya]] d [[Madagaskar]] sakken kan id ttuskecmen sɣur [[afgan|wemdan]], Akken daɣen i llant kra n tegzirin tisufanin ulac degsen-t imqerqar aladɣa deg [[agaraw Amelwi|ugaraw amelwi]]
 
+== Ismawen Iqbayliyen d [[Assaɣ ussnan|ismawen ussnanen]] imezduyen n telmas ==
+
+* [[Amqerqur n waman]] ('''[[assaɣ ussnan|s.u]]''': ''Bufotes viridis'') 
+* [[Amqerqur aburqes]] ('''[[assaɣ ussnan|s.u]]''': ''Acris gryllus'') 
+* [[Amqerqur amugay]] ('''[[assaɣ ussnan|s.u]]''': ''Kaloula pulchra'')
+* [[Amqerqur amessiruy]] Alytes obstetricans
+* [[Amqerqur n Marikan]] Anaxyrus americanus
+* [[Amqerqur n iseklan]] Rentapia hosii
+* [[Amqerqur utrim]] Anaxyrus boreas
+* [[Amqerqur iɣunam]] Rhinella marina
+
+== Tasnudert ==
+
 == Ẓeṛ daɣen ==
 * [[Agru]]
 
