/* Ismawen Iqbayliyen d ismawen ussnanen imezduyen n telmas */

--- a/Amqerqur.mw
+++ b/Amqerqur.mw
@@ -9,11 +9,11 @@ Yakk imqerqar kkand seg [[aẓaṛ amezday|uẓar imezdi]] yeddren deg [[Tamrikt
 * [[Amqerqur n waman]] ('''[[assaɣ ussnan|s.u]]''': ''Bufotes viridis'') 
 * [[Amqerqur aburqes]] ('''[[assaɣ ussnan|s.u]]''': ''Acris gryllus'') 
 * [[Amqerqur amugay]] ('''[[assaɣ ussnan|s.u]]''': ''Kaloula pulchra'')
-* [[Amqerqur amessiruy]] Alytes obstetricans
-* [[Amqerqur n Marikan]] Anaxyrus americanus
-* [[Amqerqur n iseklan]] Rentapia hosii
-* [[Amqerqur utrim]] Anaxyrus boreas
-* [[Amqerqur iɣunam]] Rhinella marina
+* [[Amqerqur amessiruy]] ('''[[assaɣ ussnan|s.u]]''':  ''Alytes obstetricans'')
+* [[Amqerqur n Marikan]] ('''[[assaɣ ussnan|s.u]]''': ''Anaxyrus americanus'')
+* [[Amqerqur n iseklan]] ('''[[assaɣ ussnan|s.u]]''': ''Rentapia hosii'')
+* [[Amqerqur utrim]] ('''[[assaɣ ussnan|s.u]]''': ''Anaxyrus boreas'')
+* [[Amqerqur iɣunam]] ('''[[assaɣ ussnan|s.u]]''': ''Rhinella marina'')
 
 == Tasnudert ==
 
