--- a/Amqerqur.mw
+++ b/Amqerqur.mw
@@ -16,6 +16,13 @@ Yakk imqerqar kkand seg [[aẓaṛ amezday|uẓar imezdi]] yeddren deg [[Tamrikt
 * [[Amqerqur iɣunam]] ('''[[assaɣ ussnan|s.u]]''': ''Rhinella marina'')
 
 == Tasnudert ==
+Aylalen imatanen n umqerqur zdin d wid yellan ɣer [[agru|wegru]] yakk d kra n imgaraden meẓẓiyen deg yal talmest <br/>
+
+[[Tugna:Crapaud commun Bufo bufo.JPG|thumb|270px|[[Amqerqur imezdi]] (''Bufo bufo'')]]
+
+Am yakk igra, Ula d imqerqar d [[aɣersiw|iɣersiwen]] n [[tit idammen isemmaṭen]] (''[[tasefliẓɣelt]]'') 
+
+=== tasnasileɣt ===
 
 == Ẓeṛ daɣen ==
 * [[Agru]]
