*Empty MediaWiki Message*

--- a/Amqerqur.mw
+++ b/Amqerqur.mw
@@ -23,6 +23,13 @@ Aylalen imatanen n umqerqur zdin d wid yellan ɣer [[agru|wegru]] yakk d kra n i
 Am yakk igra, Ula d imqerqar d [[aɣersiw|iɣersiwen]] n [[tit idammen isemmaṭen]] (''[[tasefliẓɣelt]]'') 
 
 === tasnasileɣt ===
+* Iṭarren-is meẓẓiy-it, ur inetteg ara akken iwata maca isemyifi tikli. yettidir sufel n wakal 
+* Ur ila ara (ur yesɛa ara) [[tuɣmest|tuɣmas]]
+* Aglim-is ikkerked (ḥercaw), dges timmisin 
+
+== Amyaraw ==
+
+== Amqerqur deg yidles alsan ==
 
 == Ẓeṛ daɣen ==
 * [[Agru]]
