*Empty MediaWiki Message*

--- a/Tasartut.mw
+++ b/Tasartut.mw
@@ -2,4 +2,6 @@
 
 '''Tamsartut''' deg [[tasnudert]] d tiget tasuddist yesɛan aṭas n [[Amuddir|imuddiren]], yal tamsartut tesɛa isem d agla-s, Akken daɣen yessefk ad tili s ddaw n [[isem usnan|yisem-is usnan]] dɣa ismawen-a d wid id yettwakksen ya seg [[Talatint|tlatint]] neɣ seg [[Tagrikt|tegrikt]].
 
+[[Category:tasnudert]]
+
 == Tasartut d umsedfeṛ amsartu ==
