--- a/Tikelmanin.mw
+++ b/Tikelmanin.mw
@@ -1,6 +1,6 @@
 {{Automatic taxobox}}
 
-'''Tikelmanin''' ([[Assaɣ ussnan]]: ''Amphibia'') d [[aɣersiw|iɣersiwen]] ilan (isɛan) [[aglim]] war [[Tinesnest|tikbert]] anagar drus kan n telmas gar-asent, Tessegraw tudert gar n [[aman|waman]] d wakal, Llan-t wazal n 3200 n telmas n tmankalin id yesskanayen yiwet [[tafesna]] n  [[timtegzitin]] am: [[amqerqur|imqerqar]], [[agru|igra]] d [[Taydest|tiydsin]]
+'''Tikelmanin''' ([[Assaɣ ussnan]]: ''Amphibia'') d [[aɣersiw|iɣersiwen]] ilan (isɛan) [[aglim]] war [[Tinesnest|tikbert]] anagar drus kan n telmas gar-asent, Tessegraw tudert gar n [[aman|waman]] d wakal, Llan-t wazal n 3200 n telmas n tmankalin id yesskanayen yiwet [[tafesna (tasnudert)|tfesna]] n  [[timtegzitin]] am: [[amqerqur|imqerqar]], [[agru|igra]] d [[Taydest|tiydsin]]
 
 == Tasartut d usismel n tmankalin ==
 
