--- a/Agru.mw
+++ b/Agru.mw
@@ -2,7 +2,9 @@
 '''Agru''' ('''[[Assaɣ ussnan]]''': ''Anura'') d [[tafesna (tasnudert)|tafesna]] n [[Tikelmanin|tkelmanin]] [[Timtegzitin|timtegzitin]], Iga d tagrawt tandant [[timseksumin|tamseksumt]] s talɣa tagejdant yakk d tikelmanin war [[asallaf]] gar-asen [[amqerqur]], Agru yettidir druɣ deg yal iddg deg umadal seg yideggan [[anezwu asbegsan|isbegsanen]] ar ideggan anda yettili usemmiṭ, maca azal ameqran n [[talmest|telmas-is]] ttidirent deg [[tagant tamanẓart|tẓegwa timanẓarin]] anda ttiswasmlen din ugar n 5000 n telmas, Ɣas akken ugten-t telmas-is maca deg iseggasen ineggura imusnawen ttwalin d akken amdan n igmanen n waṭas n telmas tt-drusen (tt-nqasen) <br/>
 Azal n yimdanen ur smgirriden ara gar n wegru d [[amqerqur|umqerqur]] s usrag (ɣef ssebba) n wemcabi meqqren yellan gar-asen 
 
-== Asismel ==
+== Tasensartut d usismel ==
+=== Tasensartur ===
+Azal n 88% n telmas n [[tikelmanin|tkelmanin]] [[Tasensartur (tasnudert)|ttusisemlent]] deg [[tafesna (tasnudert)|tfesna]] n igra, Deg tfesna ayhi llant wazal n 4810 n [[talmest|telmas]] ẓẓunin-t (ferqen-t) ɣef 33 n [[tawacult (tasnudert)|twaculin]] gar-asent: [[igranẓulen]] (''Leptodactylidae'') s wazal n 1100 n telmas, [[Timerdedduyin]] (''Hylidae'') s wazal n 800 n telmas, d [[igerdettiyen]] (''Ranidae'') s wazal n 750 n telmas dɣa tiwaculin-a gan-t d tid yakk meqqren. Igra ttawin yakk igra imayniten d telmas n [[Timesɣezt|tmesɣaz]] yemgaraden
 
 == Ẓeṛ daɣen ==
 * [[Amqerqur]]
