*Empty MediaWiki Message*

--- a/10_wamber.mw
+++ b/10_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''10 [[wamber]]''' d ass {{exp|wis}}314 n useggas ({{exp|wis}}315 deg iseggasen ''bisekstil''). Llan 51 wussan deffir-es ar taggara n useggas.
+Ass '''10 [[wamber]]''' d ass wis 314 n useggas (wis 315 deg iseggasen ''bisekstil''). Llan 51 wussan deffir-s ar taggara n useggas.
 <center>[[9 wamber]] - ''10 wamber'' - [[11 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''10 [[wamber]]''' d ass {{exp|wis}}314 n useggas ({{exp|wis}}315 deg isegg
 |commons=Category:10 november
 |commons azwel=10 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
