--- a/11_wamber.mw
+++ b/11_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''11 [[wamber]]''' d ass {{exp|wis}}315 n useggas ({{exp|wis}}316 deg iseggasen ''bisekstil''). Llan 50 wussan deffir-s ar taggara n useggas.
+Ass '''11 [[wamber]]''' d ass wis 315 n useggas (wis 316 deg iseggasen ''bisekstil''). Llan 50 wussan deffir-s ar taggara n useggas.
 <center>[[10 wamber]] - ''11 wamber'' - [[12 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,6 @@ Ass '''11 [[wamber]]''' d ass {{exp|wis}}315 n useggas ({{exp|wis}}316 deg isegg
 |commons=Category:11 november
 |commons azwel=11 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
-
+{{Months}}
 
 [[Taggayt:Ass n wamber]]
