*Empty MediaWiki Message*

--- a/12_wamber.mw
+++ b/12_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''12 [[wamber]]''' d ass {{exp|wis}}316 n useggas ({{exp|wis}}317 deg iseggasen ''bisekstil''). Llan 49 wussan deffir-es ar taggara n useggas.
+Ass '''12 [[wamber]]''' d ass wis 316 n useggas (wis 317 deg iseggasen ''bisekstil''). Llan 49 wussan deffir-s ar taggara n useggas.
 <center>[[11 wamber]] - ''12 wamber'' - [[13 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,8 +7,7 @@ Ass '''12 [[wamber]]''' d ass {{exp|wis}}316 n useggas ({{exp|wis}}317 deg isegg
 |commons=Category:12 november
 |commons azwel=12 wamber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
