*Empty MediaWiki Message*

--- a/13_wamber.mw
+++ b/13_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''13 [[wamber]]''' d ass {{exp|wis}}317 n useggas ({{exp|wis}}318 deg iseggasen ''bisekstil''). Llan 48 wussan deffir-s ar taggara n useggas.
+Ass '''13 [[wamber]]''' d ass wis 317 n useggas (wis 318 deg iseggasen ''bisekstil''). Llan 48 wussan deffir-s ar taggara n useggas.
 <center>[[12 wamber]] - ''13 wamber'' - [[14 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''13 [[wamber]]''' d ass {{exp|wis}}317 n useggas ({{exp|wis}}318 deg isegg
 |commons=Category:13 november
 |commons azwel=13 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
