--- a/14_wamber.mw
+++ b/14_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''14 [[wamber]]''' d ass {{exp|wis}}318 n useggas ({{exp|wis}}319 deg iseggasen ''bisekstil''). Llan 47 wussan deffir-s ar taggara n useggas.
+Ass '''14 [[wamber]]''' d ass wis 318 n useggas (wis 319 deg iseggasen ''bisekstil''). Llan 47 wussan deffir-s ar taggara n useggas.
 <center>[[13 wamber]] - ''14 wamber'' - [[15 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''14 [[wamber]]''' d ass {{exp|wis}}318 n useggas ({{exp|wis}}319 deg isegg
 |commons=Category:14 november
 |commons azwel=14 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
