*Empty MediaWiki Message*

--- a/15_wamber.mw
+++ b/15_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''15 [[wamber]]''' d ass {{exp|wis}}319 n useggas ({{exp|wis}}320 deg iseggasen ''bisekstil''). Llan 46 wussan deffir-s ar taggara n useggas.
+Ass '''15 [[wamber]]''' d ass wis 319 n useggas (wis 320 deg iseggasen ''bisekstil''). Llan 46 wussan deffir-s ar taggara n useggas.
 <center>[[14 wamber]] - ''15 wamber'' - [[16 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''15 [[wamber]]''' d ass {{exp|wis}}319 n useggas ({{exp|wis}}320 deg isegg
 |commons=Category:15 november
 |commons azwel=15 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
