*Empty MediaWiki Message*

--- a/16_wamber.mw
+++ b/16_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''16 [[wamber]]''' d ass {{exp|wis}}320 n useggas ({{exp|wis}}321 deg iseggasen ''bisekstil''). Llan 45 wussan deffir-s ar taggara n useggas.
+Ass '''16 [[wamber]]''' d ass wis 320 n useggas (wis 321 deg iseggasen ''bisekstil''). Llan 45 wussan deffir-s ar taggara n useggas.
 <center>[[15 wamber]] - ''16 wamber'' - [[17 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''16 [[wamber]]''' d ass {{exp|wis}}320 n useggas ({{exp|wis}}321 deg isegg
 |commons=Category:16 november
 |commons azwel=16 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
