*Empty MediaWiki Message*

--- a/17_wamber.mw
+++ b/17_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''17 [[wamber]]''' d ass {{exp|wis}}321 n useggas ({{exp|wis}}322 deg iseggasen ''bisekstil''). Llan 44 wussan deffir-es ar taggara n useggas.
+Ass '''17 [[wamber]]''' d ass wis 321 n useggas (wis 322 deg iseggasen ''bisekstil''). Llan 44 wussan deffir-s ar taggara n useggas.
 <center>[[16 wamber]] - ''17 wamber'' - [[18 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''17 [[wamber]]''' d ass {{exp|wis}}321 n useggas ({{exp|wis}}322 deg isegg
 |commons=Category:17 november
 |commons azwel=17 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
