*Empty MediaWiki Message*

--- a/19_wamber.mw
+++ b/19_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''19 [[wamber]]''' d ass {{exp|wis}}323 n useggas ({{exp|wis}}324 deg iseggasen ''bisekstil''). Llan 42 wussan deffir-es ar taggara n useggas.
+Ass '''19 [[wamber]]''' d ass wis 323 n useggas (wis 324 deg iseggasen ''bisekstil''). Llan 42 wussan deffir-es ar taggara n useggas.
 <center>[[18 wamber]] - ''19 wamber'' - [[20 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''19 [[wamber]]''' d ass {{exp|wis}}323 n useggas ({{exp|wis}}324 deg isegg
 |commons=Category:19 november
 |commons azwel=19 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
