--- a/20_wamber.mw
+++ b/20_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''20 [[wamber]]''' d ass {{exp|wis}}324 n useggas ({{exp|wis}}325 deg iseggasen ''bisekstil''). Llan 41 wussan deffir-es ar taggara n useggas.
+Ass '''20 [[wamber]]''' d ass wis 324 n useggas (wis 325 deg iseggasen ''bisekstil''). Llan 41 wussan deffir-s ar taggara n useggas.
 <center>[[19 wamber]] - ''20 wamber'' - [[21 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''20 [[wamber]]''' d ass {{exp|wis}}324 n useggas ({{exp|wis}}325 deg isegg
 |commons=Category:20 november
 |commons azwel=20 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
