*Empty MediaWiki Message*

--- a/21_wamber.mw
+++ b/21_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''21 [[wamber]]''' d ass {{exp|wis}}325 n useggas ({{exp|wis}}326 deg iseggasen ''bisekstil''). Llan 40 wussan deffir-s ar taggara n useggas.
+Ass '''21 [[wamber]]''' d ass wis 325 n useggas (wis 326 deg iseggasen ''bisekstil''). Llan 40 wussan deffir-s ar taggara n useggas.
 <center>[[20 wamber]] - ''21 wamber'' - [[22 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''21 [[wamber]]''' d ass {{exp|wis}}325 n useggas ({{exp|wis}}326 deg isegg
 |commons=Category:21 november
 |commons azwel=21 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
