*Empty MediaWiki Message*

--- a/22_wamber.mw
+++ b/22_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''22 [[wamber]]''' d ass {{exp|wis}}326 n useggas ({{exp|wis}}327 deg iseggasen ''bisekstil''). Llan 39 wussan deffir-es ar taggara n useggas.
+Ass '''22 [[wamber]]''' d ass wis 326 n useggas (wis 327 deg iseggasen ''bisekstil''). Llan 39 wussan deffir-s ar taggara n useggas.
 <center>[[21 wamber]] - ''22 wamber'' - [[23 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''22 [[wamber]]''' d ass {{exp|wis}}326 n useggas ({{exp|wis}}327 deg isegg
 |commons=Category:22 november
 |commons azwel=22 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
