*Empty MediaWiki Message*

--- a/23_wamber.mw
+++ b/23_wamber.mw
@@ -1,5 +1,5 @@
 {{wamber}}
-Ass '''23 [[wamber]]''' d ass {{exp|wis}}327 n useggas ({{exp|wis}}328 deg iseggasen ''bisekstil''). Llan 38 wussan deffir-s ar taggara n useggas.
+Ass '''23 [[wamber]]''' d ass wis 327 n useggas (wis 328 deg iseggasen ''bisekstil''). Llan 38 wussan deffir-s ar taggara n useggas.
 <center>[[22 wamber]] - ''23 wamber'' - [[24 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -7,9 +7,7 @@ Ass '''23 [[wamber]]''' d ass {{exp|wis}}327 n useggas ({{exp|wis}}328 deg isegg
 |commons=Category:23 november
 |commons azwel=23 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
