*Empty MediaWiki Message*

--- a/24_wamber.mw
+++ b/24_wamber.mw
@@ -1,6 +1,5 @@
 {{wamber}}
-Ass '''24 [[wamber]]''' d ass {{exp|wis}}328 n useggas ({{exp|wis}}329 deg iseggasen ''bisekstil''). Llan 37 wussan deffir-
-es ar taggara n useggas.
+Ass '''24 [[wamber]]''' d ass wis 328 n useggas (wis 329 deg iseggasen ''bisekstil''). Llan 37 wussan deffir-s ar taggara n useggas.
 <center>[[23 wamber]] - ''24 wamber'' - [[25 wamber]]</center>
 
 == Imagraden iqqenen ==
@@ -8,9 +7,7 @@ es ar taggara n useggas.
 |commons=Category:24 november
 |commons azwel=24 wamber
 }}
-{{Ass asental}}
-
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n wamber]]
