*Empty MediaWiki Message*

--- a/12_tuber.mw
+++ b/12_tuber.mw
@@ -1,5 +1,5 @@
 {{Tuber}}
-Ass '''12 [[tuber]]''' d ass {{exp|wis}}285 n useggas ({{exp|wis}}286 deg iseggasen ''bisekstil''). Llan 80 wussan deffir-s ar taggara n useggas.
+Ass '''12 [[tuber]]''' d ass wis 285 n useggas (wis 286 deg iseggasen ''bisekstil''). Llan 80 wussan deffir-s ar taggara n useggas.
 <center>[[11 tuber]] - ''12 tuber'' - [[13 tuber]]</center>
 
 == Tidyanin ==
@@ -14,8 +14,7 @@ Ass '''12 [[tuber]]''' d ass {{exp|wis}}285 n useggas ({{exp|wis}}286 deg isegga
 |commons=Category:12 october
 |commons azwel=12 tuber
 }}
-{{Ass asental}}
-{{Agni Izemzan}}
+{{Months}}
 
 
 [[Taggayt:Ass n tuber]]
